eip.tf
/* resource "aws_eip" "demoeip" {
instance_id ="${aws_instance.MyDemoInstance.id}"
tags {
  Name = "demoEip"
}
}
*/
